ConfigMaps/03-ingress/host-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campus-host-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: portal.campus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yatri-frontend
                port:
                  number: 80

    - host: api.campus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yatri-backend
                port:
                  number: 80
